[package]
name = "actix-dynamic-threadpool"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
keywords = ["actix", "threadpool"]
license = "MIT"
exclude = ["examples/*", "tests/*"]
description = "a dynamic scale threadpool for actix crates"
repository = "https://github.com/fakeshadow/actix-dynamic-threadpool"
readme= "README.md"

[lib]
name = "actix_dynamic_threadpool"
path = "src/lib.rs"

[dependencies]
derive_more = "0.99.9"
futures-channel = "0.3.5"
lazy_static = "1.3"
log = "0.4"
num_cpus = "1.10"
parking_lot = "0.11.0"

[dev-dependencies]
actix-rt = "1.1.1"
